--- a/LANGUAGE/Wcmd_chn.ini
+++ b/LANGUAGE/Wcmd_chn.ini
@@ -248,10 +248,17 @@ menu=控制面板
 button=shell32.dll,21
 
 
-[em_Git]
+[em_GitEx]
 cmd=gitmintty.cmd
 param=""%P""
 path=.
 menu=打开git-shell
+
+
+[em_Git]
+cmd=D:\program files (x86)\Git\bin\sh.exe
+param=--login
+path=.
+menu=打开git
 
 
